--- a/juegos/JuegoMemoria/index.html
+++ b/juegos/JuegoMemoria/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Pokemon Cards Match</title>
-        <link rel="stylesheet" href="cards.css">
-        <script src="cards.js"></script>
-    </head>
-
-    <body>
-        <h2>Errors: <span id="errors">0</span></h2>
-        <div id="board">
-        </div>
-    </body>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Memory Cards - GameDev Portfolio</title>
+    <link rel="stylesheet" href="../shared-game-styles.css">
+    <link rel="stylesheet" href="cards.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+</head>
+<body>
+    <div class="game-topbar">
+        <a href="/" class="back-link"><i class="fas fa-arrow-left"></i> Portfolio</a>
+        <span class="game-title">Memory Cards</span>
+        <div class="score-display">Errores: <span id="errors">0</span></div>
+    </div>
+    <div class="game-container">
+        <div id="board"></div>
+    </div>
+    <script src="cards.js"></script>
+</body>
 </html>
